TEST_PROGRAMS/INVALID/Terrence_Ko/zerobyzero.min
var n:int;

n=0;
n=00/00;
